--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 /*
 Theme Name:Child Theme for Divi
-Theme URI: http://wordpress-style.net
+Theme URI: http://wp-ninja.net
 Description: Child Theme For Divi
 Author: Eduard Ungureanu
-Author URI: http://wordpress-style.net
+Author URI: http://wp-ninja.net
 Template: Divi
-Version: 1.0
 */
 
 /* Start your custom CSS bellow this comment
