fix some typos in style.css file

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name:Child Theme for Divi
-Theme URI: http://wp-ninja.net
+Theme URI: https://wp-ninja.net
 Description: Child Theme For Divi
 Author: Eduard Ungureanu
-Author URI: http://wp-ninja.net
+Author URI: https://wp-ninja.net
 Template: Divi
 */
 
