--- a/style.css
+++ b/style.css
@@ -7,5 +7,5 @@ Author URI: https://wp-ninja.net
 Template: Divi
 */
 
-/* Start your custom CSS bellow this comment 111111
+/* Start your custom CSS bellow this comment
 ============================================ */
